--- a/PSO_02/2020-02-01 PSO 02.slides.html
+++ b/PSO_02/2020-02-01 PSO 02.slides.html
@@ -17662,8 +17662,8 @@ div.jp-OutputPrompt {
 <div class="slides"><section><section>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h1 id="PSO-02">PSO 02<a class="anchor-link" href="#PSO-02">&#182;</a></h1><h3 id="Instructor:-Giselle-Zeno">Instructor: Giselle Zeno<a class="anchor-link" href="#Instructor:-Giselle-Zeno">&#182;</a></h3><ul>
-<li>PSO OL2/OL3 materials: <a href="https://github.com/zeno129/PSO-CS448-S2021">github</a></li>
+<h1 id="PSO-02">PSO 02<a class="anchor-link" href="#PSO-02">&#182;</a></h1><h3 id="Instructor:-Giselle-Zeno">Instructor: Huangyi Ge<a class="anchor-link" href="#Instructor:-Huangyi-Ge">&#182;</a></h3><ul>
+<li>PSO 01/05 materials: <a href="https://github.com/gehuangyi20/cs448">github</a></li>
 </ul>
 
 </div>
